# GitHub-Heart

./: .env.example  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.local.json
src/: App.vue  index.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: http_client.rs  lib.rs
src-tauri/src/commands/: git.rs
src-tauri/src/git/: auth.rs  clone.rs  mod.rs  operations.rs  types.rs
src-tauri/src/utils/: mod.rs  system_command.rs
src/api/: git-info.ts  git-operations.ts
src/components/git/: BranchManager.vue  CommitManager.vue  RepoClone.vue  SyncManager.vue  TokenConfigDialog.vue
src/components/git/ui/: ConflictDialog.vue  DiffViewer.vue  ProgressBar.vue
src/components/repository/: BranchSelector.vue  FileTree.vue  ReadmeViewer.vue  RepoInfo.vue
src/components/ui/avatar/: Avatar.vue  AvatarFallback.vue  AvatarImage.vue
src/components/ui/badge/: Badge.vue
src/components/ui/card/: Card.vue
src/components/ui/dialog/: Dialog.vue  index.ts  (+4 more)
src/composables/: useGitOperations.ts  useLocalRepositories.ts  useTheme.ts
src/passport/: Login.vue
src/router/: index.ts
src/services/: deepLinkService.ts  git-api.ts  notificationService.ts
src/stores/: index.ts
src/stores/repository/: index.ts
src/stores/user/: index.ts
src/types/: git-backend.ts  git.ts  local-repository.ts  prismjs.d.ts  repository.ts
src/utils/: fetch.ts  prismLoader.ts  token.ts  utils.ts
src/view/: Home.vue  IssueDetail.vue  Issues.vue  LocalRepository.vue  LocalRepositoryDetail.vue  Overview.vue  Projects.vue  Repositories.vue  RepositoryDetail.vue  Settings.vue
(+11 files in other folders)
