[package]
name = "githubheart"
version = "1.0.0"
description = "Atomic Heart - Modern Git Repository Management Application"
authors = ["tianchang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
open = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-oauth = "2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
warp = "0.3"
futures = "0.3"
tokio-util = "0.7"

git2 = { version = "0.18", features = ["https", "ssh"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# SSH 支持增强
regex = "1.0"

# 凭据存储
keyring = "2.0"

# 日志
log = "0.4"
env_logger = "0.10"

# 文件系统操作
dirs = "5.0"

# URL 解析
url = "2.4"
